--- a/src/app/say/say.component.html
+++ b/src/app/say/say.component.html
@@ -1,15 +1,18 @@
 <div class="row">
     <div class="col-md-6">
+        <div class="all-cards">
         <div *ngFor='let quotes of quotes; let i = index'>
         <h1>{{quotes.title}}</h1>
         <p>{{quotes.description}}</p>
-        <a class="btn btn-block btn-success">Like Quote
+        
+        <a class="btn btn-block btn-success" id="like">Like Quote
             <input class="qty1" name="qty1" readonly="readonly" type="text" value="0" />
         </a>
-        <a class="btn btn-block btn-success">Dislike Quote
+        <a class="btn btn-block btn-success" id="dislike">Dislike Quote
             <input class="qty2"  name="qty2" readonly="readonly" type="text" value="0" />   
         </a>
        <app-say-work [quotes]="quotes" (deleteQuote)='deleteThisQuote($event , i)'></app-say-work>
+        </div>
         </div>
     </div>
     <div class="col-md-6">
