--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,16 @@
-<h1>GIFT OF WISDOM</h1>
+<h1>WISE MEN!!</h1>
 <h2>For the wise</h2>
-<p>Quote your thoughts in the quote of your context</p>
+<p>Quote your thoughts in the quote of your context
+
+    <img src="../say/" alt="Italian Trulli">
+
+A blind person asked Swami Vivekananda, “Can there be anything worse than losing eye sight?” He replied, “Yes, losing your vision!”
+“The purpose of VisionShine is to shine your vision.”
+Life is passing day by day. When we look back, we often realize that we have wasted so many years 
+    living someone else’s life. Many suffer in life just because we do not have the right vision.
+We are here to remind you, your purpose of life. Jonathan Swift said brilliantly, “Vision is the art of seeing the invisible.” Everyone
+         should have a vision of their life. The aim of this blog is to motivate you and realize your true potential.
+he first article published to this blog on March 29, 2014, and it publishes couple of articles every week. Our articles focused 
+    on motivation, happiness, self-help, productivity and spirituality. We focus on the practical examples of our daily life. Most 
+    of our articles are inspired from the people all around us.
+</p>
