--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';body{
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+
+body{
     background-image: url("../src/assets/wisdom.jpeg");
     background-position: center center;
     background-size: cover;
