--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-
 <div class="container">
-  
-  <div class="row">
-    <div class="col-md-5">
-      <app-about></app-about>
-    </div>
-    <div class="col-md-7">
-      <app-say></app-say>
+  <div class="jumbotron">
+
+    <div class="row">
+      <div class="col-md-5">
+        <app-about></app-about>
+      </div>
+      <div class="col-md-7">
+        <app-say></app-say>
+      </div>
     </div>
   </div>
 </div>
