--- a/src/app/say-work/say-work.component.html
+++ b/src/app/say-work/say-work.component.html
@@ -1,2 +1,2 @@
-<small>{{quotes.role}} | {{quotes.date}}</small> <br>
+<small>{{quotes.user}} | {{quotes.day}}</small> <br>
 <button (click)='Delete(true)'>Delete</button>
