--- a/src/app/say/say.component.html
+++ b/src/app/say/say.component.html
@@ -1,21 +1,34 @@
-<div class="row">
-    <div class="col-md-6">
-        <div class="all-cards">
-        <div *ngFor='let quotes of quotes; let i = index'>
-        <h1>{{quotes.title}}</h1>
-        <p>{{quotes.description}}</p>
-        
-        <a class="btn btn-block btn-success" id="like">Like Quote
-            <input class="qty1" name="qty1" readonly="readonly" type="text" value="0" />
-        </a>
-        <a class="btn btn-block btn-success" id="dislike">Dislike Quote
-            <input class="qty2"  name="qty2" readonly="readonly" type="text" value="0" />   
-        </a>
-       <app-say-work [quotes]="quotes" (deleteQuote)='deleteThisQuote($event , i)'></app-say-work>
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="jumbotron">
+                <div *ngFor='let quote of quotes; let i = index'>
+                <div class="all-cards">
+                    
+                        <p>"{{quote.author}}"</p>
+                        <p>"{{quote.user}}"</p>
+                        <!-- <p>{{quotes.unlike}}</p>
+        <p>{{quotes.like}}</p>
+         -->
+                        <a class="btn btn-block btn-success" (click)="like(i)" id="like">Like Quote : {{quote.like}}
+
+                        </a>
+                        <a class="btn btn-block btn-success" (click)="unlike(i)" id="dislike">Dislike Quote :
+                            {{quote.unlike}}
+
+                        </a>
+                        <app-say-work [quotes]="quotes" (deleteQuote)='deleteThisQuote($event , i)'></app-say-work>
+                    </div>
+                </div>
+
+            </div>
         </div>
+
+        <div class="col-md-6">
+            <div class="jumbotron">
+                <app-form (addQuote)="addNewQuote($event)"></app-form>
+            </div>
         </div>
+
     </div>
-    <div class="col-md-6">
-        <app-form></app-form>
-    </div>
-</div>
