--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <div class="row">
       <div class="col-md-5">
         <app-about></app-about>
-      </div>
+      </div><br>
+      
       <div class="col-md-7">
         <app-say></app-say>
       </div>
