--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
   
-            <label for="user">User</label>
+            <label for="user">Quote</label>
             <textarea class="form-control" id="user" rows="4" [(ngModel)]="newQuote.user" name="user" #user="ngModel" required></textarea>
             <div [hidden]="user.valid || user.pristine" class="alert alert-danger">
               <p>User is required</p>
