--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
 
              <img src="../assets/Quotes.jpeg" alt="Italian Trulli"> <br>
 
-              A blind person asked Swami Vivekananda, “Can there be anything worse than losing eye sight?” He replied, “Yes,
+              A very blind person asked Swami Vivekananda, “Can there be anything worse than losing eye sight?” He replied, “Yes,
                 losing your vision!”
                   “The purpose of VisionShine is to shine your vision.”
                   Life is passing day by day. When we look back, we often realize that we have wasted so many years
